<resources>
    <string name="app_name">HomeBuyerProject</string>
    <string name="drawer_open">opens</string>
    <string name="drawer_closed">closed</string>
    <string name="title_activity_sad">sad</string>
    <string name="title_activity_login">Sign in</string>

    <string name="action_settings"><b>Settings</b></string>
    <string name="textforcontinue">By continuing I agree to <u>Terms and Conditions</u></string>
    <string name="textforcontinue1">I agree to be contacted by HomeBuyer  for similar properties and related services </string>
    <string name="ShowCase"> <font color="white" size="20">Showcase your property to more than</font> <font color="blue">50 Lac Buyers</font>  \n<font color="white" size="25">\n \t Its Quick,Easy and Free.</font> </string>
    <string name="title_activity_login_register">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="Sell">Sell/Rent Activity</string>
    <string name="AllowedForConstruction">Floors Allowed for\nConstruction</string>
    <string name="Test"> <font color="white" size="20">Now tell us About your city. So, the \n\t\t\t\t\t\t\tBuyer attract more</font></string>


    <string name="ShowCase1"> <font color="white" size="20">Login/Sign Up to Showcase your \n\t\t\tproperty to </font> <font color="blue">50 Lac Buyers</font>  </string>
    <string-array name="asad">


        <item>--</item>
        <item>Log Out</item>
    </string-array>

    <string name="Gotit">Got It! What Type of Property  \n\t\tis it?</string>
    <string name="Quick">That was Quick ! </string>
    <string name="share1">Share a Few More Details </string>
    <string name="share2">about your property </string>
    <string name="personalwashroom">Personal \nWashroom </string>
    <string name="furnish">Furnishing</string>
    <string name="so">So, you are lookin to post \n\t\t\t\t your property for</string>
    <string name="where">\tWhere is your \nproperty located?</string>



    <string name="enter_city_name_hint">Enter city name:</string>
    <string name="formatted_place_data">my valuesss</string>


    <string name="btn_link_to_register">Register</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="title_activity_residencail_search">ResidencailSearchActivity</string>

    <string-array name="MaintenanceCharges">
        <item>Monthly</item>
        <item>Annually</item>
        <item>One Time</item>
        <item>Per unit/Monthly</item>

    </string-array>
    <string-array name="Ownership">
        <item>Freehold</item>
        <item>Leasehold</item>
        <item>Co-operative Society</item>
        <item>Power of Attorney</item>

    </string-array>

    <string-array name="propertyage">
        <item>New Construction</item>
        <item>Less than 5 yeras</item>
        <item>5 to 10 years</item>
        <item>10 to 15 years</item>
        <item>15 to 20 years</item>
        <item>Above 20 years</item>
    </string-array>


    <string-array name="itemsforarea">
        <item>Sqft</item>
        <item>Sqyrd</item>
        <item>Sqm</item>
        <item>Acre</item>
        <item>Bigha</item>
        <item>Hectare</item>
        <item>Marla</item>
        <item>Biswa1</item>
        <item>Biswa2</item>
        <item>Ground</item>
        <item>Ankadam</item>
        <item>Rood</item>
        <item>Chatak</item>
        <item>Kottah</item>
        <item>Marla</item>
        <item>Cent</item>
        <item>Perch</item>
        <item>Guntha</item>
        <item>Are</item>
    </string-array>


    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
    <string name="title_activity_post_property">Post Property</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sell_rent_activty">SellRentActivty</string>
    <string name="title_activity_residential__commercial_">Residential_Commercial_Activity</string>
    <string name="title_activity_upload__property_">Upload_Property_Activity</string>
    <string name="title_activity__post_property__click">Activity_Post_property_Click</string>
</resources>
