<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">


        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.example.asad.homebuyerproject.PostProperty">


            <ImageView
                android:id="@+id/Backgroundimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@mipmap/background" />


            <include
                android:id="@+id/app_bar"
                layout="@layout/appbartransparent"></include>


            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:paddingBottom="10dp">


                <LinearLayout
                    android:id="@+id/asadzain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Quick"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/share1"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/share2"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp"

                        />


                    <LinearLayout
                        android:id="@+id/images"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"

                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="12dp"
                            android:layout_marginStart="12dp"
                            android:layout_weight="0.51"
                            android:background="@drawable/cover_1" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/asadzain"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/roundedcorner"
                    android:elevation="0dp"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    >


                </LinearLayout>


            </RelativeLayout>


        </FrameLayout>
    </ScrollView>

    <fragment
        android:id="@+id/fragment_navigation1"
        android:name="com.example.asad.homebuyerproject.NavigationBar"
        android:layout_width="@dimen/navigationdrawerwidth"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation"
        tools:layout="@layout/fragment_navigation" />


</android.support.v4.widget.DrawerLayout>