<?xml version="1.0" encoding="utf-8"?><!-- calling when register button is clicked from loginregister -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E1F5FE"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingRight="0dp">


    <LinearLayout
        android:id="@+id/MainLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:hint="Name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#9E9E9E"
            android:textColorHint="#9E9E9E" />


        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#9E9E9E"
            android:textColorHint="#9E9E9E" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#9E9E9E"
            android:textColorHint="#9E9E9E" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
           >

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:defaultNameCode="PK"
                android:layout_marginTop="5dp" />


            <EditText
                android:id="@+id/mobile"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/ccp"
                android:hint="Number"
                android:background="@drawable/rectangle"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="#9E9E9E"
                android:textColorHint="#9E9E9E"
                android:layout_width="match_parent"
                android:layout_alignBottom="@+id/ccp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:paddingLeft="10dp" />


        </RelativeLayout>


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/LayoutContinue"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <!-- Login Button -->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:checked="true"
                android:gravity="left"
                android:text="" />

            <TextView
                android:id="@+id/TermsandConditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:padding="2dp"
                android:text="@string/textforcontinue1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#3F51B5"
                android:textSize="18dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="55dp"
            android:inputType="text"
            android:padding="8dp"
            android:text="@string/textforcontinue"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#3F51B5"
            android:textSize="16dp" />

    </RelativeLayout>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="#01579B"
        android:text="Register"
        android:textColor="@color/white" />

    <!-- Link to Login Screen -->

    <Button
        android:id="@+id/btnLinkToLoginScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="#81D4FA"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="#01579B"
        android:textSize="15dp" />


</LinearLayout>


